rig/rig-derive/tests/ui/custom_name/fail_name_too_long.rs
#![allow(dead_code)]

use rig_derive::rig_tool;

#[rig_tool(name = "a2345678a2345678a2345678a2345678a2345678a2345678a2345678a2345678x")]
fn invalid_name_length() -> Result<String, rig::tool::ToolError> {
    Ok("ok".to_string())
}

fn main() {}
